add update Text and Note Name
