# src/routes/notes.router.js
@@ -1,7 +1,7 @@
 import { Router } from "express";
-import { createNote, deleteNoteByNoteName, getNoteByNoteName, getNotesByUserName } from "../controller/notes.controller.js";
+import { createNote, deleteNoteByNoteName, getNoteByNoteName, getNotesByUserName, updateNoteName, updateText } from "../controller/notes.controller.js";
 import { hasPermission, hasPermission_dbComprobation } from "../middleware/roleComprobation.js";
-import { reqCreateNoteControl, reqDeleteNoteControl, reqGetAllNotesByUserControl, reqGetNoteByNameControl } from "../middleware/reqCorrectionNotes.js";
+import { reqCreateNoteControl, reqDeleteNoteControl, reqGetAllNotesByUserControl, reqGetNoteByNameControl, reqUpdateNoteNameControl, reqUpdateTextControl } from "../middleware/reqCorrectionNotes.js";
 
 const router = Router()
 
@@ -11,6 +11,10 @@ router.post("/createNote", hasPermission, reqCreateNoteControl, createNote)
 router.post("/getNote", hasPermission, reqGetNoteByNameControl, getNoteByNoteName)
 
 router.post("/getAllNotes", hasPermission, reqGetAllNotesByUserControl, getNotesByUserName)
+
+router.put("/updateNoteName", hasPermission, reqUpdateNoteNameControl, updateNoteName)
+
+router.put("/updateText", hasPermission, reqUpdateTextControl, updateText)
 
 router.delete("/deleteNote", hasPermission_dbComprobation, reqDeleteNoteControl, deleteNoteByNoteName)
 
